--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,12 @@ p,h1,h2,h3,h4,h5,h6,a {
 
 /****************** HOME PAGE ******************/
 .home_page {
-  background-color:#1c1e26;
+  background-color:#C8D6E5;
   display: flex;
   flex-direction: column;
   justify-content: center;
   height: 100vh;
-  color: #fff
+  color: #000;
 }
 
 .welcome_button:hover {
@@ -27,14 +27,11 @@ p,h1,h2,h3,h4,h5,h6,a {
   font-size: 30px;
 }
 
-/****************** BODY ******************/
-.body_content{
-  background-color:#c1aaaa1f;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 95vh;
+.landing_title, .position_title {
+  text-transform: uppercase;
 }
+
+/****************** BODY ******************/
 
 
 /****************** FOOTER ******************/
@@ -44,7 +41,14 @@ p,h1,h2,h3,h4,h5,h6,a {
 
 
 /****************** NAV ******************/
-.menu_item{
-  padding-right: 10px;
-  padding-left: 10px;
+
+.main-nav {
+  background-color: #C8D6E5;
+  display: grid;
+  grid-template-columns: auto;
+}
+
+.ui.secondary.pointing.menu {
+  border: none;
+  padding-top: 1vh;
 }
