--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,12 @@ p,h1,h2,h3,h4,h5,h6,a {
   border: none;
   padding-top: 1vh;
 }
+
+/****************** QUOTE ******************/
+.quotePage {
+  background-color:#C8D6E5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+}
